Update Semaphore configuration

--- a/.semaphore/pipeline_2.yml
+++ b/.semaphore/pipeline_2.yml
@@ -14,7 +14,7 @@ blocks:
             - sudo pip install awscli
             - aws ecr get-login --no-include-email | bash
             - 'docker pull "${ECR_REGISTRY}:latest" || true'
-            - 'docker build --cache-from "${ECR_REGISTRY}:latest" -t "${ECR_REGISTRY}:${SEMAPHORE_WORKFLOW_ID}" -t Dockerfile.ci .'
+            - 'docker build --cache-from "${ECR_REGISTRY}:latest" -t "${ECR_REGISTRY}:${SEMAPHORE_WORKFLOW_ID}" -f Dockerfile.ci .'
             - 'docker images          '
             - 'docker push "${ECR_REGISTRY}:${SEMAPHORE_WORKFLOW_ID}"'
       secrets:
